--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "$schema": "https://json.schemastore.org/package.json",
   "name": "cryptoss",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "bun run watch-routes & vite",
+    "watch-routes": "tsr watch",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -18,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "@tanstack/react-query": "^5.71.10",
     "@tanstack/react-router": "^1.115.0",
+    "@tanstack/react-router-devtools": "^1.116.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,6 +34,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@tanstack/router-cli": "^1.116.0",
+    "@tanstack/router-plugin": "^1.116.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.14.0",
@@ -47,6 +52,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.29.1",
     "vite": "^6.2.0",
+    "vite-plugin-svgr": "^4.3.0",
     "vitest": "^3.1.1"
   }
 }
